Blender 2.8 - Reflection plane image in wrong position when camera view is not centered #63108

Closed
opened 2019-03-29 21:25:17 +01:00 by Lars Soderlind · 3 comments

System Information
Operating system: Windows 7 64-bit
Graphics card: GeForce GTX 1060 6GB

Blender Version
Broken: blender-2.80-b6d1946c2e6b-win64 2019-03-20 also tried recent build blender-2.80-99d4321feff6-win64 2019-03-29
Worked: blender-2.80-6b39dc7672eb-win64 2019-03-12

Short description of error
The image in the reflection plane does not appear in the correct position if you move the screen while you are inside the camera view.
I'm not talking about moving the actual camera, only the view. User view and rendering with f12 looks correct.

Exact steps for others to reproduce the error
Open attached blend file.
Choose rendered mode.
Move the view by holding shift, middle mouse button and drag. Or using the "Move the view" hand icon.
Observe how the reflection plane image does not move in the horizontal direction.Reflection_Plane_Bug.mp4

Reflection_plane_bug.blend

**System Information** Operating system: Windows 7 64-bit Graphics card: GeForce GTX 1060 6GB **Blender Version** Broken: blender-2.80-b6d1946c2e6b-win64 2019-03-20 also tried recent build blender-2.80-99d4321feff6-win64 2019-03-29 Worked: blender-2.80-6b39dc7672eb-win64 2019-03-12 **Short description of error** The image in the reflection plane does not appear in the correct position if you move the screen while you are inside the camera view. I'm not talking about moving the actual camera, only the view. User view and rendering with f12 looks correct. **Exact steps for others to reproduce the error** Open attached blend file. Choose rendered mode. Move the view by holding shift, middle mouse button and drag. Or using the "Move the view" hand icon. Observe how the reflection plane image does not move in the horizontal direction.[Reflection_Plane_Bug.mp4](https://archive.blender.org/developer/F6899429/Reflection_Plane_Bug.mp4) [Reflection_plane_bug.blend](https://archive.blender.org/developer/F6899430/Reflection_plane_bug.blend)
Author

Added subscriber: @soderlind

Added subscriber: @soderlind
Clément Foucault was assigned by Sebastian Parborg 2019-03-31 13:03:13 +02:00

This issue was referenced by b26164ded5

This issue was referenced by b26164ded5e9804f233dc72407080939c960f9a1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63108
No description provided.